--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,5 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
-	;greiman/SSD1306Ascii@^1.3.3
-	;mikalhart/TinyGPSPlus@^1.0.3
-	;plerup/EspSoftwareSerial@^6.16.1
-	;me-no-dev/AsyncTCP@^1.1.1
-	;me-no-dev/ESP Async WebServer@^1.2.3
+	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	esphome/AsyncTCP-esphome@^1.2.2
