Added Regex Routes and Web logging

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/AsyncTCP
-
+build_flags = 
+    -DASYNCWEBSERVER_REGEX
