--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/me-no-dev/AsyncTCP
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	https://github.com/me-no-dev/AsyncTCP
+board_build.partitions = partitions_custom.csv
 build_flags = 
     -DASYNCWEBSERVER_REGEX
