Remove Regex, Added Button Debounce

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,4 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/me-no-dev/AsyncTCP
 board_build.partitions = partitions_custom.csv
-build_flags = 
-    -DASYNCWEBSERVER_REGEX
+monitor_speed = 115200
