--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,8 @@ framework = arduino
 lib_deps = 
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/me-no-dev/AsyncTCP
+	greiman/SSD1306Ascii@^1.3.3
+	mikalhart/TinyGPSPlus@^1.0.3
+	plerup/EspSoftwareSerial@^6.16.1
 board_build.partitions = partitions_custom.csv
 monitor_speed = 115200
