--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/me-no-dev/AsyncTCP
 	mikalhart/TinyGPSPlus@^1.0.3
-	plerup/EspSoftwareSerial@^6.16.1
+	;plerup/EspSoftwareSerial@^6.16.1
 	adafruit/Adafruit NeoPixel@^1.10.5
 board_build.partitions = partitions_custom.csv
 monitor_speed = 115200
