--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,42 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[platformio]
+
+[env]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
-lib_deps = 
-	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	https://github.com/me-no-dev/AsyncTCP
-	mikalhart/TinyGPSPlus@^1.0.3
-	;plerup/EspSoftwareSerial@^6.16.1
-	adafruit/Adafruit NeoPixel@^1.10.5
-board_build.partitions = partitions_custom.csv
 monitor_speed = 115200
+lib_deps = 
+	https://github.com/me-no-dev/AsyncTCP @ 1.1.1+sha.ca8ac5f
+	https://github.com/me-no-dev/ESPAsyncWebServer @ 1.2.3+sha.f71e3d4
+	mikalhart/TinyGPSPlus@^1.0.3
+	adafruit/Adafruit NeoPixel@^1.10.5
+check_skip_packages = yes
+board_build.partitions = partitions_custom.csv
+
+[env:release]
+build_type = release
+build_flags = 
+	-DCORE_DEBUG_LEVEL=0
+	-DUSE_SERIAL=false
+lib_deps = makuna/NeoPixelBus@^2.7.1
+
+[env:verbosedebug]
+build_type = debug
+monitor_raw = yes
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DUSE_SERIAL=true
+	-DCONFIG_ARDUHAL_LOG_COLORS=true
+lib_deps = makuna/NeoPixelBus@^2.7.1
+
+[env:simpledebug]
+build_type = release
+monitor_raw = yes
+build_flags = 
+	-DCORE_DEBUG_LEVEL=1
+	-DUSE_SERIAL=true
+	-DCONFIG_ARDUHAL_LOG_COLORS=true
+lib_deps = makuna/NeoPixelBus@^2.7.1
