Change Neopixel Lib, added led and gps state mech

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
 	https://github.com/me-no-dev/AsyncTCP @ 1.1.1+sha.ca8ac5f
 	https://github.com/me-no-dev/ESPAsyncWebServer @ 1.2.3+sha.f71e3d4
 	mikalhart/TinyGPSPlus@^1.0.3
-	adafruit/Adafruit NeoPixel@^1.10.5
+	makuna/NeoPixelBus@^2.7.1
 check_skip_packages = yes
 board_build.partitions = partitions_custom.csv
 
@@ -28,7 +28,6 @@ build_type = release
 build_flags = 
 	-DCORE_DEBUG_LEVEL=0
 	-DUSE_SERIAL=false
-lib_deps = makuna/NeoPixelBus@^2.7.1
 
 [env:verbosedebug]
 build_type = debug
@@ -37,7 +36,6 @@ build_flags =
 	-DCORE_DEBUG_LEVEL=5
 	-DUSE_SERIAL=true
 	-DCONFIG_ARDUHAL_LOG_COLORS=true
-lib_deps = makuna/NeoPixelBus@^2.7.1
 
 [env:simpledebug]
 build_type = release
@@ -46,4 +44,3 @@ build_flags =
 	-DCORE_DEBUG_LEVEL=1
 	-DUSE_SERIAL=true
 	-DCONFIG_ARDUHAL_LOG_COLORS=true
-lib_deps = makuna/NeoPixelBus@^2.7.1
