--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer @ 1.2.3+sha.f71e3d4
 	mikalhart/TinyGPSPlus@^1.0.3
 	makuna/NeoPixelBus@^2.7.1
+	milesburton/DallasTemperature@^3.11.0
 check_skip_packages = yes
 board_build.partitions = partitions_custom.csv
 
@@ -27,20 +28,18 @@ board_build.partitions = partitions_custom.csv
 build_type = release
 build_flags = 
 	-DCORE_DEBUG_LEVEL=0
-	-DUSE_SERIAL=false
+	-DCONFIG_ARDUHAL_LOG_COLORS=true
 
 [env:verbosedebug]
 build_type = debug
 monitor_raw = yes
 build_flags = 
 	-DCORE_DEBUG_LEVEL=5
-	-DUSE_SERIAL=true
 	-DCONFIG_ARDUHAL_LOG_COLORS=true
 
 [env:simpledebug]
 build_type = release
 monitor_raw = yes
 build_flags = 
-	-DCORE_DEBUG_LEVEL=1
-	-DUSE_SERIAL=true
+	-DCORE_DEBUG_LEVEL=2
 	-DCONFIG_ARDUHAL_LOG_COLORS=true
