Added ADS1115 ADC

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	mikalhart/TinyGPSPlus@^1.0.3
 	makuna/NeoPixelBus@^2.7.1
 	milesburton/DallasTemperature@^3.11.0
+	robtillaart/ADS1X15@^0.3.9
 check_skip_packages = yes
 board_build.partitions = partitions_custom.csv
 
